# Step-Audio-EditX

./: .gitignore  Dockerfile  README.md  app.py  model_loader.py  pyproject.toml  tokenizer.py  tts.py  tts_infer.py  utils.py
config/train_config/: config.json  ds_zero3.json
config/train_config/accelerate_configs/: deepspeed_zero3.yaml
config/train_config/inference_config/: config.json
funasr_detach/models/whisper/utils/: tokenizer.py
scripts/: ReadMe.md  ReadMe_zh.md  extract_audio_token_test.py  run_edit_dpo.sh  run_edit_grpo.sh  run_edit_grpo_vllm.sh  run_edit_sft.sh
src/: train_edit.py  train_edit_dpo.py  train_edit_sft.py
src/dataset/: edit_dataset.py  edit_dpodataset.py  edit_sftdataset.py
src/model/: step1_causal_lm.py  step_audio.py
src/utils/: flow_server.py  reward_cer.py  reward_emo.py  reward_func.py  reward_func_gemini.py  reward_func_genrm.py  reward_func_r1.py  reward_mos.py  reward_server.py  reward_sim.py  rewards.py  run_server.sh  run_sim.py
src/utils/modules/: s3prl  wavlm_ecapa
src/utils/stepvocoder/cosyvoice2/cli/: cosyvoice.py
stepvocoder/cosyvoice2/hifigan/: generator.py
