[project]
name = "step-audio-editx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "funasr>=1.3.0",
    "gradio>=6.3.0",
    "hdbscan>=0.8.41",
    "hyperpyyaml>=1.2.3",
    "librosa>=0.11.0",
    "onnxruntime>=1.23.2",
    "openai-whisper>=20250625",
    "pytorch-memlab>=0.3.0",
    "rotary-embedding-torch>=0.8.9",
    "sox>=1.5.0",
    "torch-complex>=0.4.4",
    "torchcodec>=0.9.1",
    "transformers>=4.57.5",
    "whisper>=1.1.10",
]

[tool.uv]
# Allow searching multiple indexes for best match
index-strategy = "unsafe-best-match"
